--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,7 +88,7 @@ jobs:
 
       - name: Exfiltrate MSI
         if: runner.os == 'Windows'
-        run: Move-Item -Path "${{ env.SOURCE_PATH }}/target/release/bundle/msi/cube-shuffle*.msi.tar.gz" -Destination "./CubeShuffle-GUI.msi.tar.gz"
+        run: Move-Item -Path "${{ env.SOURCE_PATH }}/target/release/bundle/msi/cube-shuffle*.msi.tar.gz" -Destination "${{ github.workspace }}/CubeShuffle-GUI.msi.tar.gz"
       - name: List files DEBUG
         run: ls -R
       - uses: actions/upload-artifact@v2
@@ -97,7 +97,7 @@ jobs:
         with:
           if-no-files-found: error
           name: CubeShuffle-Tauri_${{ runner.os }}_${{ runner.arch }}.msi
-          path: "./CubeShuffle-GUI.msi.tar.gz"
+          path: "${{ github.workspace }}/CubeShuffle-GUI.msi.tar.gz"
 
       - name: Exfiltrate macOS app
         if: runner.os == 'macOS'
