--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -300,8 +300,8 @@ jobs:
       - name: Make update json
         run: |
           jq -n \
-          --arg version = "${GITHUB_REF##*/}" \
-          --arg now = `date --iso-8601=ns` \
+          --arg version "${GITHUB_REF##*/}" \
+          --arg now `date --iso-8601=ns` \
           '{
             "name": "$version",
             "notes": "All releases at https://github.com/philipborg/CubeShuffle/releases",
