--- a/cube_shuffle-core/Cargo.toml
+++ b/cube_shuffle-core/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.4"
-parse-display = "0.5.3"
-serde = { version = "1.0", features = ["derive"] }
+rand = "^0.8"
+parse-display = "^0.5"
+serde = { version = "^1.0", features = ["derive"] }
 
 [dev-dependencies]
-proptest = "1.0.0"
+proptest = "^1.0"
