--- a/cube_shuffle-wasm/Cargo.toml
+++ b/cube_shuffle-wasm/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-itertools = "0.10.2"
-rand = "0.8.4"
-getrandom = { version = "0.2", features = ["js"] }
+itertools = "^0.10"
+rand = "^0.8"
+getrandom = { version = "^0.2", features = ["js"] }
 yew = { git = "https://github.com/yewstack/yew/" }
-console_error_panic_hook = "0.1.7"
-web-sys = { version = "0.3", features = ["Event", "EventTarget", "InputEvent"] }
-wasm-bindgen = "0.2"
+console_error_panic_hook = "^0.1.7"
+web-sys = { version = "^0.3", features = ["Event", "EventTarget", "InputEvent"] }
+wasm-bindgen = "^0.2"
 cube_shuffle-core = { path = "../cube_shuffle-core" }
