--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -285,6 +285,26 @@ jobs:
           if-no-files-found: error
           path: "./CubeShuffle_Android.aab"
 
+  docker-cli:
+    runs-on: ubuntu-latest
+    name: "Docker CLI build"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64,linux/386,linux/arm
+          load: false
+          push: false
+          pull: true
+          file: CLI.Dockerfile
+
   publish:
     needs: [ cordova-build, cli-build, rust-build ]
     runs-on: ubuntu-latest
