--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -299,11 +299,13 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,linux/386,linux/arm
+          platforms: linux/amd64,linux/arm64/v8
           load: false
           push: false
           pull: true
           file: CLI.Dockerfile
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   publish:
     needs: [ cordova-build, cli-build, rust-build ]
