--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ tauri-build = { version = "1.0.0-rc.3", features = [] }
 [dependencies]
 serde_json = "^1.0"
 serde = { version = "^1.0", features = ["derive"] }
-tauri = { version = "1.0.0-rc.3", features = ["updater"] }
+tauri = { version = "1.0.0-rc.3", features = ["shell-open", "updater"] }
 
 [features]
 default = [ "custom-protocol" ]
