--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,6 @@ jobs:
       matrix:
         platform: [ macos-latest, ubuntu-latest, windows-2022 ]
     runs-on: ${{ matrix.platform }}
-    env:
-      TAURI_CONFIG: "${{ startsWith(github.ref, 'refs/tags/v') && '{\"package\":{\"version\": \"v0.1.1\"}}' || '{}' }}"
     steps:
       - uses: actions/checkout@v2
         with:
@@ -57,9 +55,7 @@ jobs:
         if: runner.os == 'Windows'
         working-directory: "${{ env.SOURCE_PATH }}/cube_shuffle-wasm"
       - name: Tauri Build
-        run: |
-          cargo tauri build -c "${{ env.TAURI_CONFIG }}" \
-          || true
+        run: cargo tauri build || true
         working-directory: "${{ env.SOURCE_PATH }}/src-tauri"
 
       - uses: actions/upload-artifact@v2
@@ -302,7 +298,7 @@ jobs:
       - name: Make update json
         run: |
           jq -n \
-          --arg version "${GITHUB_REF##*/}" \
+          --arg version "${GITHUB_REF##*/v}" \
           --arg now `date --iso-8601=ns` \
           '{
             "name": "[$version]",
