--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -301,21 +301,21 @@ jobs:
           --arg version "${GITHUB_REF##*/v}" \
           --arg now `date --iso-8601=ns` \
           '{
-            "name": "[$version]",
+            "name": $version,
             "notes": "All releases at https://github.com/philipborg/CubeShuffle/releases",
-            "pub_date": "[$now]",
+            "pub_date": $now,
             "platforms": {
               "darwin": {
                 "signature":"",
-                "url": "https://github.com/philipborg/CubeShuffle/releases/download/[$version]/CubeShuffle-GUI.app.tar.gz"
+                "url": ("https://github.com/philipborg/CubeShuffle/releases/download/" + $version + "/CubeShuffle-GUI.app.tar.gz")
               },
               "linux": {
                 "signature":"",
-                "url": "https://github.com/philipborg/CubeShuffle/releases/download/[$version]/CubeShuffle-GUI.AppImage.tar.gz"
+                "url": ("https://github.com/philipborg/CubeShuffle/releases/download/" + $version + "/CubeShuffle-GUI.AppImage.tar.gz")
               },
               "win64": {
                 "signature":"",
-                "url": "https://github.com/philipborg/CubeShuffle/releases/download/[$version]/CubeShuffle-GUI.msi.zip"
+                "url": ("https://github.com/philipborg/CubeShuffle/releases/download/" + $version + "/CubeShuffle-GUI.msi.zip")
               }
             }
           }' \
