--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -299,6 +299,7 @@ jobs:
         run: |
           jq -n \
           --arg version "${GITHUB_REF##*/v}" \
+          --arg tag_version "${GITHUB_REF##*/}" \
           --arg now `date --iso-8601=ns` \
           '{
             "name": $version,
@@ -307,15 +308,15 @@ jobs:
             "platforms": {
               "darwin": {
                 "signature":"",
-                "url": ("https://github.com/philipborg/CubeShuffle/releases/download/" + $version + "/CubeShuffle-GUI.app.tar.gz")
+                "url": ("https://github.com/philipborg/CubeShuffle/releases/download/" + $tag_version + "/CubeShuffle-GUI.app.tar.gz")
               },
               "linux": {
                 "signature":"",
-                "url": ("https://github.com/philipborg/CubeShuffle/releases/download/" + $version + "/CubeShuffle-GUI.AppImage.tar.gz")
+                "url": ("https://github.com/philipborg/CubeShuffle/releases/download/" + $tag_version + "/CubeShuffle-GUI.AppImage.tar.gz")
               },
               "win64": {
                 "signature":"",
-                "url": ("https://github.com/philipborg/CubeShuffle/releases/download/" + $version + "/CubeShuffle-GUI.msi.zip")
+                "url": ("https://github.com/philipborg/CubeShuffle/releases/download/" + $tag_version + "/CubeShuffle-GUI.msi.zip")
               }
             }
           }' \
