--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,7 @@ jobs:
         working-directory: "${{ env.SOURCE_PATH }}/cube_shuffle-wasm"
       - name: Tauri Build
         run: |
+          echo $TAURI_PUBLIC_KEY
           cargo tauri build -c "{\"tauri\": {\"updater\": {\"pubkey\": \"$TAURI_PUBLIC_KEY\"}}}" \
           || ${{ secrets.TAURI_PRIVATE_KEY && 'false' || 'true' }}
         working-directory: "${{ env.SOURCE_PATH }}/src-tauri"
