--- a/cube_shuffle-wasm/Cargo.toml
+++ b/cube_shuffle-wasm/Cargo.toml
@@ -11,7 +11,7 @@ itertools = "^0.10"
 rand = "^0.8"
 sha3 = "^0.10"
 getrandom = { version = "^0.2", features = ["js"] }
-yew = { git = "https://github.com/yewstack/yew/" }
+yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
 console_error_panic_hook = "^0.1.7"
 web-sys = { version = "^0.3", features = ["Event", "EventTarget", "InputEvent"] }
 wasm-bindgen = "^0.2"
