--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
       - uses: Swatinem/rust-cache@v1
         with:
           working-directory: ${{ env.SOURCE_PATH }}
+          cache-on-failure: true
       - name: Install webkit/GTK dependencies (Linux)
         if: matrix.platform == 'ubuntu-latest'
         run: |
@@ -226,6 +227,7 @@ jobs:
       - uses: Swatinem/rust-cache@v1
         with:
           key: ${{ matrix.target }}
+          cache-on-failure: true
       - uses: actions-rs/cargo@v1
         name: Compile
         with:
