--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -268,7 +268,7 @@ jobs:
           submodules: 'recursive'
           path: ${{ env.SOURCE_PATH }}
       - name: Download compiled WASM
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: CubeShuffle-wasm_ubuntu-latest
           path: "${{ env.SOURCE_PATH }}/cube_shuffle-cordova/www"
@@ -281,16 +281,42 @@ jobs:
         run: mv "${{ env.SOURCE_PATH }}/cube_shuffle-cordova/platforms/android/app/build/outputs/bundle/release/app-release.aab" "./CubeShuffle_Android.aab"
       - uses: actions/upload-artifact@v2
         with:
-          name: CubeShuffle-Cordova-Android
+          name: CubeShuffle-Cordova-Android-Bundle
           if-no-files-found: error
           path: "./CubeShuffle_Android.aab"
 
+  apk-generate:
+    container:
+      image: openjdk:19-jdk-alpine
+    runs-on: ubuntu-latest
+    needs: [ cordova-build ]
+    steps:
+      - name: Install dependencies
+        run: |
+          apk update
+          apk add wget unzip
+      - name: Download bundletool
+        run: wget -O bundletool.jar https://github.com/google/bundletool/releases/download/1.9.0/bundletool-all-1.9.0.jar
+      - name: Download AAB
+        uses: actions/download-artifact@v3
+        with:
+          name: CubeShuffle-Cordova-Android-Bundle
+      - name: Build APKS
+        run: java -jar "./bundletool.jar" build-apks --mode=universal --bundle="./CubeShuffle_Android.aab" --output="./CubeShuffle_Android.apks"
+      - name: Extract APK
+        run: unzip -p "./CubeShuffle_Android.apks" "universal.apk" > "./CubeShuffle_Android.apk"
+      - uses: actions/upload-artifact@v2
+        with:
+          name: CubeShuffle-Cordova-Android-Universal
+          if-no-files-found: error
+          path: "./CubeShuffle_Android.apk"
+
   publish:
-    needs: [ cordova-build, cli-build, rust-build ]
+    needs: [ cordova-build, cli-build, rust-build, apk-generate ]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
       - name: List artifacts
         run: ls -R
       - name: Install jq
@@ -331,7 +357,8 @@ jobs:
           fail_on_unmatched_files: true
           prerelease: true
           files: |
-            CubeShuffle-Cordova-Android/CubeShuffle_Android.aab
+            CubeShuffle-Cordova-Android-Bundle/CubeShuffle_Android.aab
+            CubeShuffle-Cordova-Android-Universal/CubeShuffle_Android.apk
             CubeShuffle-Tauri_Linux_X64.AppImage/CubeShuffle-GUI.AppImage.tar.gz
             CubeShuffle-Tauri_Linux_X64.deb/CubeShuffle-GUI.deb
             CubeShuffle-Tauri_Windows_X64.msi/CubeShuffle-GUI.msi.zip
