--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install webkit/GTK dependencies (Linux)
         if: matrix.platform == 'ubuntu-latest'
         run: |
-          sudo apt-get update
+          sudo apt-get -y update
           sudo apt-get -y install libwebkit2gtk-4.0-dev \
             build-essential \
             curl \
@@ -287,14 +287,14 @@ jobs:
 
   apk-generate:
     container:
-      image: openjdk:19-jdk-alpine
+      image: openjdk:19-jdk-slim-bullseye
     runs-on: ubuntu-latest
     needs: [ cordova-build ]
     steps:
       - name: Install dependencies
         run: |
-          apk update
-          apk add wget unzip
+          apt-get -y update
+          apt-get -y install wget unzip
       - name: Download bundletool
         run: wget -O bundletool.jar https://github.com/google/bundletool/releases/download/1.9.0/bundletool-all-1.9.0.jar
       - name: Download AAB
