--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -306,13 +306,13 @@ jobs:
         with:
           name: CubeShuffle-Cordova-Android-Bundle
       - name: Build APKS
-        run: |
-          java -jar "./bundletool.jar" build-apks \
-          --mode=universal \
-          --ks="${{ env.SOURCE_PATH }}/cubeshuffle.keystore" \
-          --ks-pass=pass:${{ secrets.KEYSTORE_PASSWORD }} \
-          --ks-key-alias=cubeshuffle \
-          --bundle="./CubeShuffle_Android.aab" \
+        run: >
+          java -jar "./bundletool.jar" build-apks
+          --mode=universal
+          --ks="${{ env.SOURCE_PATH }}/cubeshuffle.keystore"
+          --ks-pass=pass:${{ secrets.KEYSTORE_PASSWORD }}
+          --ks-key-alias=cubeshuffle
+          --bundle="./CubeShuffle_Android.aab"
           --output="./CubeShuffle_Android.apks"
       - name: Extract APK
         run: unzip -p "./CubeShuffle_Android.apks" "universal.apk" > "./CubeShuffle_Android.apk"
