--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -302,7 +302,7 @@ jobs:
           --mode=universal
           --ks="${{ env.SOURCE_PATH }}/cubeshuffle.keystore"
           --ks-pass=pass:${{ secrets.KEYSTORE_PASSWORD }}
-          --ks-key-alias=cubeshuf
+          --ks-key-alias=cush
           --bundle="./CubeShuffle_Android.aab"
           --output="./CubeShuffle_Android.apks"
       - name: Extract APK
