New password without special characters.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -299,10 +299,10 @@ jobs:
       - name: Build APKS
         run: >
           java -jar "./bundletool.jar" build-apks
-          --mode=universal
+          --mode="universal"
           --ks="${{ env.SOURCE_PATH }}/cubeshuffle.keystore"
-          --ks-pass=pass:${{ secrets.KEYSTORE_PASSWORD }}
-          --ks-key-alias=cush
+          --ks-pass="pass:${{ secrets.KEYSTORE_PASSWORD }}"
+          --ks-key-alias="cush"
           --bundle="./CubeShuffle_Android.aab"
           --output="./CubeShuffle_Android.apks"
       - name: Extract APK
