--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ env:
   SOURCE_PATH: "./src"
 
 jobs:
-  rust-build:
+  tauri-build:
     strategy:
       fail-fast: false
       matrix:
@@ -126,20 +126,40 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --all-features --workspace --all-targets --manifest-path "${{ env.SOURCE_PATH }}/Cargo.toml"
-      - name: Trunk build
-        run: trunk build --release --dist "${{ github.workspace }}/wasm_build"
-        working-directory: "${{ env.SOURCE_PATH }}/cube_shuffle-wasm"
-      - uses: actions/upload-artifact@v3
-        with:
-          name: CubeShuffle-wasm_${{ matrix.platform }}
-          if-no-files-found: error
-          path: "${{ github.workspace }}/wasm_build"
       - name: Run tests
         run: cargo test --verbose --locked --release --no-fail-fast
         working-directory: ${{ env.SOURCE_PATH }}
       - name: Format check
         run: cargo fmt --all --check
         working-directory: ${{ env.SOURCE_PATH }}
+
+  wasm-build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'
+          path: ${{ env.SOURCE_PATH }}
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: wasm32-unknown-unknown
+          override: true
+      - uses: Swatinem/rust-cache@v1
+        with:
+          working-directory: ${{ env.SOURCE_PATH }}
+          cache-on-failure: true
+      - name: Install Trunk
+        run: cargo install --locked trunk
+      - name: Build WASM
+        run: trunk build --release --dist "${{ github.workspace }}/wasm_build"
+        working-directory: ${{ env.SOURCE_PATH }}/cube_shuffle-wasm
+      - name: Upload wasm
+        uses: actions/upload-artifact@v3
+        with:
+          name: CubeShuffle-wasm
+          if-no-files-found: error
+          path: "${{ github.workspace }}/wasm_build"
 
   cli-build:
     strategy:
@@ -250,7 +270,7 @@ jobs:
     container:
       image: beevelop/cordova:latest
     runs-on: ubuntu-latest
-    needs: [ rust-build ]
+    needs: [ wasm-build ]
     steps:
       - name: Install Git
         run: apt-get -y update && apt-get -y install git
@@ -261,7 +281,7 @@ jobs:
       - name: Download compiled WASM
         uses: actions/download-artifact@v3
         with:
-          name: CubeShuffle-wasm_ubuntu-latest
+          name: CubeShuffle-wasm
           path: "${{ env.SOURCE_PATH }}/cube_shuffle-cordova/www"
       - name: Build Android
         working-directory: "${{ env.SOURCE_PATH }}/cube_shuffle-cordova"
@@ -315,7 +335,7 @@ jobs:
             ./CubeShuffle_Android.apk
 
   publish:
-    needs: [ cordova-build, cli-build, rust-build, apk-generate ]
+    needs: [ cordova-build, cli-build, tauri-build, wasm-build, apk-generate ]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
