--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -316,13 +316,21 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: CubeShuffle-Cordova-Android-Bundle
-      - name: Build APKS
+      - name: Build signed APKS
+        if: startsWith(github.ref, 'refs/tags/v')
         run: >
           java -jar "./bundletool.jar" build-apks
           --mode="universal"
           --ks="${{ env.SOURCE_PATH }}/cubeshuffle.keystore"
           --ks-pass="pass:${{ secrets.KEYSTORE_PASSWORD }}"
           --ks-key-alias="cush"
+          --bundle="./CubeShuffle_Android.aab"
+          --output="./CubeShuffle_Android.apks"
+      - name: Build unsigned APKS
+        if: startsWith(github.ref, 'refs/tags/v') != true
+        run: >
+          java -jar "./bundletool.jar" build-apks
+          --mode="universal"
           --bundle="./CubeShuffle_Android.aab"
           --output="./CubeShuffle_Android.apks"
       - name: Extract APK
