--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: wasm32-unknown-unknown
+          target: wasm32-unknown-unknown${{ runner.os == 'macOS' && ', aarch64-apple-darwin' || '' }}
           components: rustfmt, clippy
           override: true
       - uses: Swatinem/rust-cache@v1
@@ -56,7 +56,7 @@ jobs:
         if: runner.os == 'Windows'
         working-directory: "${{ env.SOURCE_PATH }}/cube_shuffle-wasm"
       - name: Tauri Build
-        run: cargo tauri build ${{runner.os == 'macOS' && '--target universal-apple-darwin' || ''}} || true
+        run: cargo tauri build ${{ runner.os == 'macOS' && '--target universal-apple-darwin' || '' }} || true
         working-directory: "${{ env.SOURCE_PATH }}/src-tauri"
 
       - uses: actions/upload-artifact@v3
