--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,9 +50,9 @@ jobs:
             patchelf \
             librsvg2-dev
       - name: Install Trunk
-        run: cargo install --locked trunk
+        run: cargo install --locked trunk --version ~0.14.0
       - name: Install Tauri
-        run: cargo install tauri-cli --locked --version 1.0.0-rc.7
+        run: cargo install tauri-cli --locked --version 1.0.0-rc.8
 
       - name: Windows CMD workaround
         run: trunk build --release --dist "./../src-tauri/websrc"
