--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,13 +46,12 @@ jobs:
             wget \
             libssl-dev \
             libgtk-3-dev \
-            libappindicator3-dev \
-            patchelf \
+            libayatana-appindicator3-dev \
             librsvg2-dev
       - name: Install Trunk
         run: cargo install --locked trunk --version ~0.14.0
       - name: Install Tauri
-        run: cargo install tauri-cli --locked --version 1.0.0-rc.8
+        run: cargo install tauri-cli --locked --version 1.0.2
 
       - name: Windows CMD workaround
         run: trunk build --release --dist "./../src-tauri/websrc"
