--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,12 +10,12 @@ edition = "2021"
 build = "src/build.rs"
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-rc.5", features = [] }
+tauri-build = { version = "1.0.2", features = [] }
 
 [dependencies]
 serde_json = "^1.0"
 serde = { version = "^1.0", features = ["derive"] }
-tauri = { version = "1.0.0-rc.6", features = ["shell-open", "updater"] }
+tauri = { version = "1.0.2", features = ["shell-open", "updater"] }
 
 [features]
 default = [ "custom-protocol" ]
